<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_image_filters</name>
  <version>0.0.0</version>
  <description>Depth image filter chain with configurable filters and multi-output publishers (DepthImage, LaserScan)</description>
  <maintainer email="ukima1205@gmail.com">antique</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>generate_parameter_library</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
